# maakansha-assets

./: .gitignore  Dockerfile  agent.py  build_and_deploy.sh  config.yaml  detect_methods.py  pyproject.toml  register_agentspace.sh  requirements.txt  test_agent.py  test_cloud_agent.py  test_remote.py  verify_bigquery.py  verify_deployment.py
.ipynb_checkpoints/: Dockerfile-checkpoint
deployment/: deploy.py
infra/: load_balancer.tf  security.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
infra/.ipynb_checkpoints/: main-checkpoint.tf  monitoring-checkpoint.tf  terraform-checkpoint.tfstate  terraform.tfstate-checkpoint.backup
src/: orchestrator.py
src/.ipynb_checkpoints/: main-checkpoint.py  orchestrator-checkpoint.py
src/agents/: it_agent.py  payroll_agent.py  scheduling_agent.py
src/agents/.ipynb_checkpoints/: document_agent-checkpoint.py  it_agent-checkpoint.py  pdf_document_agent-checkpoint.py  scheduling_agent-checkpoint.py
src/agents/analytics/: __init__.py  agent.py  prompt.py
src/models/: onboarding_state.py
src/models/.ipynb_checkpoints/: employee-checkpoint.py
src/services/: advanced_gcs_service.py  google_workspace.py
src/services/.ipynb_checkpoints/: advanced_gcs_service-checkpoint.py  firestore_svc-checkpoint.py  gcs_service-checkpoint.py
src/utils/: logger.py
src/utils/.ipynb_checkpoints/: retry_policy-checkpoint.py
tests/: test_flow.py
tests/.ipynb_checkpoints/: test_doc_agent-checkpoint.py  test_it_agent-checkpoint.py
